--- a/packages/ui-library/src/css/row-index-nav.scss
+++ b/packages/ui-library/src/css/row-index-nav.scss
@@ -41,7 +41,7 @@
         font-size: 14px;
         color: $color-midnight;
         border: 1px solid transparent;
-        margin: 0 0 10px 0;
+        margin: 0 0 10px;
         cursor: pointer;
 
         @include transition(all 0.2s);
