--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -9,31 +9,32 @@ table {
             width: 100%;
             table-layout: fixed;
 
-            $widths: (
-                5: 5,
-                10: 10,
-                12: 12.5,
-                15: 15,
-                20: 20,
-                25: 25,
-                30: 30,
-                33: 100/3,
-                35: 35,
-                40: 40,
-                45: 45,
-                50: 50,
-                55: 55,
-                60: 60,
-                65: 65,
-                66: 200/3,
-                70: 70,
-                75: 75,
-                80: 80,
-                85: 85,
-                87: 87.5,
-                90: 90,
-                95: 95
-            );
+            $widths:
+                (
+                    5: 5,
+                    10: 10,
+                    12: 12.5,
+                    15: 15,
+                    20: 20,
+                    25: 25,
+                    30: 30,
+                    33: 100/3,
+                    35: 35,
+                    40: 40,
+                    45: 45,
+                    50: 50,
+                    55: 55,
+                    60: 60,
+                    65: 65,
+                    66: 200/3,
+                    70: 70,
+                    75: 75,
+                    80: 80,
+                    85: 85,
+                    87: 87.5,
+                    90: 90,
+                    95: 95
+                );
 
             @each $name, $value in $widths {
                 .column-#{$name}p {
@@ -268,9 +269,10 @@ table {
 
 .table-title {
     font-size: 18px;
-    margin: 30px 0 10px 0;
+    margin: 30px 0 10px;
     color: $color-slate;
 }
+
 a.add-table-row {
     position: relative;
     display: inline-block;
