--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -66,7 +66,7 @@
                 font-size: 24px;
                 line-height: 1.2em;
                 margin: 0;
-                padding: 0 0 20px 0;
+                padding: 0 0 20px;
             }
         }
     }
@@ -253,7 +253,8 @@
             margin-bottom: 20px;
         }
     }
-    &.input-selection-list-tooltip, &.link-dropdown-list {
+    &.input-selection-list-tooltip,
+    &.link-dropdown-list {
         .details-content {
             .details-content-inner {
                 border-color: $color-timberwolf;
@@ -319,7 +320,8 @@
             padding: 10px 10px 0;
         }
     }
-    &.alert, &.confirm {
+    &.alert,
+    &.confirm {
         .details-content-inner {
             p {
                 margin-bottom: 0.5em;
